libs/fleet/sdk-bindings/swift/CyclopsSdkFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
typedef struct ForeignBytes
{
    int32_t len;
    const uint8_t *_Nullable data;
} ForeignBytes;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
uint64_t uniffi_cyclops_sdk_fn_clone_cyclopsclient(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_cyclops_sdk_fn_free_cyclopsclient(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_constructor_cyclopsclient_connect(RustBuffer configuration, uint64_t http_client, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_constructor_cyclopsclient_connect_browser_with_access_token(RustBuffer configuration, RustBuffer access_token, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_constructor_cyclopsclient_connect_with_access_token(RustBuffer configuration, RustBuffer access_token, uint64_t http_client, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_cyclops_sdk_fn_constructor_cyclopsclient_connect_with_access_token_and_native_http_client(RustBuffer configuration, RustBuffer access_token, RustCallStatus *_Nonnull out_status
);
uint16_t uniffi_cyclops_sdk_checksum_func_healthy_pool_display_status(void

);
uint16_t uniffi_cyclops_sdk_checksum_func_pool_display_status(void

);
uint16_t uniffi_cyclops_sdk_checksum_func_removed_pool_display_status(void

);
uint16_t uniffi_cyclops_sdk_checksum_func_terminating_pool_display_status(void

);
uint16_t uniffi_cyclops_sdk_checksum_func_unknown_pool_display_status(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_create_claim(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_delete_claim(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_get_claim(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_list_claims(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_renew_claim(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_wait_claim(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_access_token(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_create_fleet_claims(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_list_fleet_claims(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_presign_image_uploads(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_upload_image_file(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_create_image(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_delete_image(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_get_image(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_list_images(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_create_namespace(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_delete_namespace(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_get_namespace(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_list_namespaces(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_create_pool(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_delete_pool(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_get_pool(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_list_pools(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_reconcile_pool(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_update_pool(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_service_request(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_service_websocket_url(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_create_signed_service_url(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_list_signed_service_urls(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_revoke_signed_service_url(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_create_template(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_delete_template(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_get_template(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_list_templates(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_reconcile_template(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_update_template(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_create_user_api_key(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_delete_user_api_key(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopsclient_list_user_api_keys(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_accesstokenprovider_get_access_token(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_httpclient_execute(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createclaimrequestbuilder_build(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createclaimrequestbuilder_labels(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createclaimrequestbuilder_name(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createclaimrequestbuilder_pool(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createclaimrequestbuilder_spec(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createpoolrequestbuilder_build(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createpoolrequestbuilder_namespace(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createpoolrequestbuilder_spec(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createsignedserviceurlrequestbuilder_build(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createsignedserviceurlrequestbuilder_expires_in_seconds(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createsignedserviceurlrequestbuilder_label(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createsignedserviceurlrequestbuilder_sandbox(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createsignedserviceurlrequestbuilder_service(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createtemplaterequestbuilder_build(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createtemplaterequestbuilder_name(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createtemplaterequestbuilder_namespace(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createtemplaterequestbuilder_spec(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createuserapikeyrequestbuilder_build(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createuserapikeyrequestbuilder_name(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_createuserapikeyrequestbuilder_scope(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopstokenproviderconfigurationbuilder_base_url(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopstokenproviderconfigurationbuilder_build(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopstokenproviderconfigurationbuilder_claim_poll_interval_ms(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopstokenproviderconfigurationbuilder_claim_poll_limit(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopstokenproviderconfigurationbuilder_pool_poll_interval_ms(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_cyclopstokenproviderconfigurationbuilder_pool_poll_limit(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_httprequestbuilder_body(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_httprequestbuilder_build(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_httprequestbuilder_headers(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_httprequestbuilder_max_response_bytes(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_httprequestbuilder_method(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_httprequestbuilder_timeout_secs(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_httprequestbuilder_url(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_templatebuilder_api_version(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_templatebuilder_build(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_templatebuilder_kind(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_templatebuilder_metadata(void

);
uint16_t uniffi_cyclops_sdk_checksum_method_templatebuilder_spec(void

);
uint16_t uniffi_cyclops_sdk_checksum_constructor_cyclopsclient_connect(void

);
uint16_t uniffi_cyclops_sdk_checksum_constructor_cyclopsclient_connect_browser_with_access_token(void

);
uint16_t uniffi_cyclops_sdk_checksum_constructor_cyclopsclient_connect_with_access_token(void

);
uint16_t uniffi_cyclops_sdk_checksum_constructor_cyclopsclient_connect_with_access_token_and_native_http_client(void

);
uint16_t uniffi_cyclops_sdk_checksum_constructor_cyclopsclient_connect_with_access_token_provider(void

);
uint16_t uniffi_cyclops_sdk_checksum_constructor_cyclopsclient_connect_with_access_token_provider_and_native_http_client(void

);
uint16_t uniffi_cyclops_sdk_checksum_constructor_cyclopsclient_connect_with_native_http_client(void

);
uint16_t uniffi_cyclops_sdk_checksum_constructor_createclaimrequestbuilder_new(void

);
uint16_t uniffi_cyclops_sdk_checksum_constructor_createpoolrequestbuilder_new(void

);
uint16_t uniffi_cyclops_sdk_checksum_constructor_createsignedserviceurlrequestbuilder_new(void

);
uint16_t uniffi_cyclops_sdk_checksum_constructor_createtemplaterequestbuilder_new(void

);
uint16_t uniffi_cyclops_sdk_checksum_constructor_createuserapikeyrequestbuilder_new(void

);
uint16_t uniffi_cyclops_sdk_checksum_constructor_cyclopscredentials_new(void

);
uint16_t uniffi_cyclops_sdk_checksum_constructor_cyclopstokenproviderconfigurationbuilder_new(void

);
uint16_t uniffi_cyclops_sdk_checksum_constructor_httprequestbuilder_new(void

);
uint16_t uniffi_cyclops_sdk_checksum_constructor_templatebuilder_new(void

);
uint32_t ffi_cyclops_sdk_uniffi_contract_version(void

);