libs/fleet/sdk-bindings/ts-uniffi-browser/cpp/fleet_sdk_module.rs

    fn uniffi_cyclops_sdk_checksum_func_healthy_pool_display_status() -> u16;
    fn uniffi_cyclops_sdk_checksum_func_pool_display_status() -> u16;
    fn uniffi_cyclops_sdk_checksum_func_removed_pool_display_status() -> u16;
    fn uniffi_cyclops_sdk_checksum_func_terminating_pool_display_status() -> u16;
    fn uniffi_cyclops_sdk_checksum_func_unknown_pool_display_status() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_create_claim() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_delete_claim() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_get_claim() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_list_claims() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_renew_claim() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_wait_claim() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_access_token() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_create_fleet_claims() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_list_fleet_claims() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_presign_image_uploads() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_upload_image_file() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_create_image() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_delete_image() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_get_image() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_list_images() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_create_namespace() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_delete_namespace() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_get_namespace() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_list_namespaces() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_create_pool() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_delete_pool() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_get_pool() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_list_pools() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_reconcile_pool() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_update_pool() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_service_request() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_service_websocket_url() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_create_signed_service_url() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_list_signed_service_urls() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_revoke_signed_service_url() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_create_template() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_delete_template() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_get_template() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_list_templates() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_reconcile_template() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_update_template() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_create_user_api_key() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_delete_user_api_key() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopsclient_list_user_api_keys() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_accesstokenprovider_get_access_token() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_httpclient_execute() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_createclaimrequestbuilder_build() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_createclaimrequestbuilder_labels() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_createclaimrequestbuilder_name() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_createclaimrequestbuilder_pool() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_createclaimrequestbuilder_spec() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_createpoolrequestbuilder_build() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_createpoolrequestbuilder_namespace() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_createpoolrequestbuilder_spec() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_createsignedserviceurlrequestbuilder_build() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_createsignedserviceurlrequestbuilder_expires_in_seconds(
    ) -> u16;
    fn uniffi_cyclops_sdk_checksum_method_createsignedserviceurlrequestbuilder_label() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_createsignedserviceurlrequestbuilder_sandbox() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_createsignedserviceurlrequestbuilder_service() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_createtemplaterequestbuilder_build() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_createtemplaterequestbuilder_name() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_createtemplaterequestbuilder_namespace() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_createtemplaterequestbuilder_spec() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_createuserapikeyrequestbuilder_build() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_createuserapikeyrequestbuilder_name() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_createuserapikeyrequestbuilder_scope() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopstokenproviderconfigurationbuilder_base_url() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopstokenproviderconfigurationbuilder_build() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopstokenproviderconfigurationbuilder_claim_poll_interval_ms(
    ) -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopstokenproviderconfigurationbuilder_claim_poll_limit(
    ) -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopstokenproviderconfigurationbuilder_pool_poll_interval_ms(
    ) -> u16;
    fn uniffi_cyclops_sdk_checksum_method_cyclopstokenproviderconfigurationbuilder_pool_poll_limit(
    ) -> u16;
    fn uniffi_cyclops_sdk_checksum_method_httprequestbuilder_body() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_httprequestbuilder_build() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_httprequestbuilder_headers() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_httprequestbuilder_max_response_bytes() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_httprequestbuilder_method() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_httprequestbuilder_timeout_secs() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_httprequestbuilder_url() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_templatebuilder_api_version() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_templatebuilder_build() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_templatebuilder_kind() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_templatebuilder_metadata() -> u16;
    fn uniffi_cyclops_sdk_checksum_method_templatebuilder_spec() -> u16;
    fn uniffi_cyclops_sdk_checksum_constructor_cyclopsclient_connect() -> u16;
    fn uniffi_cyclops_sdk_checksum_constructor_cyclopsclient_connect_browser_with_access_token(
    ) -> u16;
    fn uniffi_cyclops_sdk_checksum_constructor_cyclopsclient_connect_with_access_token() -> u16;
    fn uniffi_cyclops_sdk_checksum_constructor_cyclopsclient_connect_with_access_token_and_native_http_client(
    ) -> u16;
    fn uniffi_cyclops_sdk_checksum_constructor_cyclopsclient_connect_with_access_token_provider(
    ) -> u16;
    fn uniffi_cyclops_sdk_checksum_constructor_cyclopsclient_connect_with_access_token_provider_and_native_http_client(
    ) -> u16;
    fn uniffi_cyclops_sdk_checksum_constructor_cyclopsclient_connect_with_native_http_client() -> u16;
    fn uniffi_cyclops_sdk_checksum_constructor_createclaimrequestbuilder_new() -> u16;
    fn uniffi_cyclops_sdk_checksum_constructor_createpoolrequestbuilder_new() -> u16;
    fn uniffi_cyclops_sdk_checksum_constructor_createsignedserviceurlrequestbuilder_new() -> u16;
    fn uniffi_cyclops_sdk_checksum_constructor_createtemplaterequestbuilder_new() -> u16;
    fn uniffi_cyclops_sdk_checksum_constructor_createuserapikeyrequestbuilder_new() -> u16;
    fn uniffi_cyclops_sdk_checksum_constructor_cyclopscredentials_new() -> u16;
    fn uniffi_cyclops_sdk_checksum_constructor_cyclopstokenproviderconfigurationbuilder_new() -> u16;
    fn uniffi_cyclops_sdk_checksum_constructor_httprequestbuilder_new() -> u16;
    fn uniffi_cyclops_sdk_checksum_constructor_templatebuilder_new() -> u16;
    fn ffi_cyclops_sdk_uniffi_contract_version() -> u32;
}
#[wasm_bindgen]
pub fn ubrn_uniffi_cyclops_sdk_fn_clone_cyclopsclient(
    handle: js::Handle,
    f_status_: &mut js::RustCallStatus,
) -> js::Handle {
    let mut u_status_ = u::RustCallStatus::default();
    let value_ = unsafe {
        uniffi_cyclops_sdk_fn_clone_cyclopsclient(u64::into_rust(handle), &mut u_status_)
    };
    f_status_.copy_from(u_status_);
    value_.into_js()
}
#[wasm_bindgen]
pub fn ubrn_uniffi_cyclops_sdk_fn_free_cyclopsclient(
    handle: js::Handle,
    f_status_: &mut js::RustCallStatus,
) {
    let mut u_status_ = u::RustCallStatus::default();
    unsafe { uniffi_cyclops_sdk_fn_free_cyclopsclient(u64::into_rust(handle), &mut u_status_) };
    f_status_.copy_from(u_status_);
}
#[wasm_bindgen]
pub fn ubrn_uniffi_cyclops_sdk_fn_constructor_cyclopsclient_connect(
    configuration: js::ForeignBytes,
    http_client: js::Handle,
    f_status_: &mut js::RustCallStatus,
) -> js::Handle {
    let mut u_status_ = u::RustCallStatus::default();
    let value_ = unsafe {
        uniffi_cyclops_sdk_fn_constructor_cyclopsclient_connect(
            u::RustBuffer::into_rust(configuration),
            u64::into_rust(http_client),
            &mut u_status_,
        )
    };
    f_status_.copy_from(u_status_);
    value_.into_js()
}
#[wasm_bindgen]
pub fn ubrn_uniffi_cyclops_sdk_fn_constructor_cyclopsclient_connect_browser_with_access_token(
    configuration: js::ForeignBytes,
    access_token: js::ForeignBytes,
    f_status_: &mut js::RustCallStatus,
) -> js::Handle {
    let mut u_status_ = u::RustCallStatus::default();
    let value_ = unsafe {
        uniffi_cyclops_sdk_fn_constructor_cyclopsclient_connect_browser_with_access_token(
            u::RustBuffer::into_rust(configuration),
            u::RustBuffer::into_rust(access_token),
            &mut u_status_,
        )
    };
    f_status_.copy_from(u_status_);
    value_.into_js()
}
#[wasm_bindgen]
pub fn ubrn_uniffi_cyclops_sdk_fn_constructor_cyclopsclient_connect_with_access_token(
    configuration: js::ForeignBytes,
    access_token: js::ForeignBytes,
    http_client: js::Handle,
    f_status_: &mut js::RustCallStatus,
) -> js::Handle {
    let mut u_status_ = u::RustCallStatus::default();
    let value_ = unsafe {
        uniffi_cyclops_sdk_fn_constructor_cyclopsclient_connect_with_access_token(
            u::RustBuffer::into_rust(configuration),
            u::RustBuffer::into_rust(access_token),
            u64::into_rust(http_client),
            &mut u_status_,
        )
    };
    f_status_.copy_from(u_status_);
    value_.into_js()
}
#[wasm_bindgen]
pub fn ubrn_uniffi_cyclops_sdk_fn_constructor_cyclopsclient_connect_with_access_token_and_native_http_client(
    configuration: js::ForeignBytes,
    access_token: js::ForeignBytes,
    f_status_: &mut js::RustCallStatus,
) -> js::Handle {
    let mut u_status_ = u::RustCallStatus::default();
    let value_ = unsafe {
        uniffi_cyclops_sdk_fn_constructor_cyclopsclient_connect_with_access_token_and_native_http_client (u :: RustBuffer :: into_rust (configuration) , u :: RustBuffer :: into_rust (access_token) , & mut u_status_)
    };
    f_status_.copy_from(u_status_);
    value_.into_js()
}
